--- a/ArcsSystem/templates/base.html
+++ b/ArcsSystem/templates/base.html
@@ -158,7 +158,7 @@
 		<!--Footer -->
 		<div class="container-fluid">
 			<div class="custom-container h">
-				<div class="row m-0">
+				<div class="row footer-menu-nav">
 					<div class="col-6 h" style="padding: 0;">
 						<nav class="navbar navbar-default navbar-expand-lg footer-navbar" style="padding:0;">
 							<!-- Collection of nav links, forms, and other content for toggling -->
@@ -241,24 +241,24 @@
 					<div class="row">
 						<div class="col-auto">
 							<a href="{% url 'staticpages:terms_detail' %}">
-							{% trans "Terms of service" %}
+							<p class="mb-0">{% trans "Terms of service" %}</p>
 							</a>
 						</div>
 						<div class="col-auto">
 							<a href="{% url 'staticpages:privacy_detail' %}">
-							{% trans "Privacy policy" %}
+							<p class="mb-0">{% trans "Privacy policy" %}</p>
 							</a>
 						</div>
 						<div class="col-auto">
 							<a href="{% url 'staticpages:cookies_detail' %}">
-							{% trans "Cookies policy" %}
+							<p class="mb-0">{% trans "Cookies policy" %}</p>
 							</a>
 						</div>
 					</div>
 				</div>
 				<div class="col-auto">
 					<a href="{% url 'staticpages:sourcecode_detail' %}">
-					{% trans "Powered by: The ARCS open source platform" %}
+					<p class="mb-0">{% trans "Powered by: The ARCS open source platform" %}</p>
 					</a>
 				</div>
 			</div>
