--- a/ArcsSystem/templates/organizations/organization_detail.html
+++ b/ArcsSystem/templates/organizations/organization_detail.html
@@ -1,3 +1,14 @@
 {% extends 'base.html' %}
 {% load static %}
 {% load i18n %}
+
+
+{% block content %}
+
+    <div class="custom-container">
+        <h1>{{ organization.name }}</h1>
+        <h2>{{ organization.description }}</h2>
+        <h2>{{ organization.website }}</h2>
+        
+    </div>
+{% endblock content %}
