--- a/ArcsSystem/templates/workpackages/theme_view.html
+++ b/ArcsSystem/templates/workpackages/theme_view.html
@@ -9,7 +9,7 @@
 
 <ul>
     {% for theme in object_list %}
-        <li><a href="{{  }}">{{ theme.title }}</a></li>
+        <li><a href="#">{{ theme.title }}</a></li>
 
     {% endfor %}
 </ul>
