Add cms for blog, change home page cms setting

--- a/ArcsSystem/templates/home.html
+++ b/ArcsSystem/templates/home.html
@@ -10,32 +10,51 @@
 {{ var1 }}
 
 
+
 <div class="container-fluid">
     <div class="custom-container">
         <div class="row">
             <div class="col-6 h" style="padding-right:25px;">
                 <div class="row">
                     <div class="col">
-                        {% image page.welcome_image original class="img-fluid" alt=" " %}
-                        <!-- <img class="img-fluid" src="" alt="{% trans '' %}"/> -->
+                        {% if page.welcome_image %}
+                            {% image page.welcome_image original class="img-fluid" alt=" " %}
+                        {% else %}
+                            <img class="img-fluid" src="{% static "devplaceholder/sami-takarautio-UZOpP-YHe9Q-unsplash.jpg"%}" alt="{% trans '' %}"/>
+                        {% endif %}
                     </div>
                 </div>
                 <div class="row">
                     <div class="col">
                         <br>
-                        <!-- <h1>{% trans "Welcome" %}</h1> -->
-                        <h1>{{ page.welcome_title }}</h1>
-                        <p class="font-weight-bold">{{ page.welcome_body }}</p>
-                        <!-- <p class="font-weight-bold">{% trans  "Welcome to medborgarforskning.se – Sweden's portal for persons interested in learning about citizen science and how to get started in Sweden as well as those who have been involved for years. While this site uses the term citizen science it is more than this term. Citizen science is about researchers and the public cooperating to develop new knowledge. At medborgarforskning.se anyone who wants to learn more about citizen science can search for projects to participate in and contribute to the portal with their own knowledge and experience.<br><br> As a researcher, you can find information about the methodology of citizen science, get tips and inspiration to start your own projects, exchange experiences and make connections with other researchers and volunteers.You can also post your projects on the portal to reach different target groups.<br><br> If you're not a researcher, you can do exactly the same things as the researchers. Citizen science is for everyone." %}</p> -->
+                        {% if page.welcome_title %}
+                            <h1>{{ page.welcome_title }}</h1>
+                        {% else %}
+                            <h1>{% trans "Welcome" %}</h1>
+                        {% endif %}
+
+                        {% if page.welcome_body %}
+                            <p class="font-weight-bold">{{ page.welcome_body }}</p>
+                        {% else %}
+                            <p class="font-weight-bold">{% trans  "Welcome to medborgarforskning.se – Sweden's portal for persons interested in learning about citizen science and how to get started in Sweden as well as those who have been involved for years. While this site uses the term citizen science it is more than this term. Citizen science is about researchers and the public cooperating to develop new knowledge. At medborgarforskning.se anyone who wants to learn more about citizen science can search for projects to participate in and contribute to the portal with their own knowledge and experience.<br><br> As a researcher, you can find information about the methodology of citizen science, get tips and inspiration to start your own projects, exchange experiences and make connections with other researchers and volunteers.You can also post your projects on the portal to reach different target groups.<br><br> If you're not a researcher, you can do exactly the same things as the researchers. Citizen science is for everyone." %}</p>
+                        {% endif %}
                     </div>
                 </div>
             </div>
             <div class="col-6 h" style="padding-left:25px;">
                 <div class="row">
                     <div class="col">
-                        <h1>{% trans "Projects" %}</h1>
-                        <p>{{ page.project_body }}</p>
-                        <!-- <p> {% trans "The database at medborgarforskning.se contains citizen science projects and activities from Sweden that are available for participation. This includes both Swedish and international initiatives. You can use filters to search and sort among the projects to find, for example, projects that deal with a specific topic (e.g. birds or health), take place in specific locations (eg outdoors in nature or in cities), or aimed at different participants (e.g. children or adults). On the project pages you will find more information about what is involved as well as contact information for the organizer." %} <p> -->
+                        {% if page.project_title %}
+                            <h1>{{ page.project_title }}</h1>
+                        {% else %}
+                            <h1>{% trans "Projects" %}</h1>
+                        {% endif %}
+
+                        {% if page.project_body %}
+                            <p>{{ page.project_body }}</p>
+                        {% else %}
+                            <p> {% trans "The database at medborgarforskning.se contains citizen science projects and activities from Sweden that are available for participation. This includes both Swedish and international initiatives. You can use filters to search and sort among the projects to find, for example, projects that deal with a specific topic (e.g. birds or health), take place in specific locations (eg outdoors in nature or in cities), or aimed at different participants (e.g. children or adults). On the project pages you will find more information about what is involved as well as contact information for the organizer." %} <p>
+                        {% endif %}
                     </div>
                     <div class="row">
                         <div id="main-page-slider" class="col">
@@ -123,24 +142,41 @@
     <div class="custom-container ">
         <div class="row ml-0 main-page-box background-greenish-color">
             <div class="col-4 d-flex justify-content-center align-items-center">
-                <h1>{{ page.get_CitSciSE_title }}</h1>
-                <!-- <h1>{% trans "Get involved with CitSciSE" %}</h1> -->
+                {% if page.get_CitSciSE_title %}
+                    <h1>{{ page.get_CitSciSE_title }}</h1>
+                {% else %}
+                    <h1>{% trans "Get involved with CitSciSE" %}</h1>
+                {% endif %}
             </div>
             <div class="col-8 d-flex justify-content-center align-items-center">
-                <p class="mb-0">{{ page.get_CitSciSE_body }}</p>
-                <!-- <p class="mb-0">{% trans "If you would like to improve the content on CitSciSE or would like to learn more about how to integrate with CitSciSE. Please see our contact information below and the API for accessing the site's content." %}</p> -->
+                {%if page.get_CitSciSE_body %}
+                    <p class="mb-0">{{ page.get_CitSciSE_body }}</p>
+                {% else %}
+                    <p class="mb-0">{% trans "If you would like to improve the content on CitSciSE or would like to learn more about how to integrate with CitSciSE. Please see our contact information below and the API for accessing the site's content." %}</p>
+                {% endif %}
             </div>
         </div>
     </div>
     <div class="custom-container">
         <div class="row ml-0">
             <div class="col h slider-color items-box">
-                <h1>{{ page.data_quality_box_title }}</h1>
-                <!-- <h1> {% trans "Data Quality" %} </h1> -->
-                <p class="font-weight-bold" >{{ page.data_quality_box_subtitle }}</p>
-                <!-- <p class="font-weight-bold" >{% trans "Getting Started" %}</p> -->
-                <p class="text-justify ">{{ page.data_quality_box_body }}</p>
-                <!-- <p class="text-justify ">{% trans "Some of the first questions in citizen science is can we trust the data and is the data of sufficient quality. Fundamental readings and resources on Data Quality, Data Standards and Technologies have been compiled in the resources to help address your question." %}</p> -->
+                {% if page.data_quality_box_title %}
+                    <h1>{{ page.data_quality_box_title }}</h1>
+                {% else %}
+                    <h1> {% trans "Data Quality" %} </h1>
+                {% endif %}
+
+                {%if page.data_quality_box_subtitle %}
+                    <p class="font-weight-bold" >{{ page.data_quality_box_subtitle }}</p>
+                {% else %}
+                    <p class="font-weight-bold" >{% trans "Getting Started" %}</p>
+                {% endif %}
+
+                {% if page.data_quality_box_body %}
+                    <p class="text-justify ">{{ page.data_quality_box_body }}</p>
+                {% else %}
+                    <p class="text-justify ">{% trans "Some of the first questions in citizen science is can we trust the data and is the data of sufficient quality. Fundamental readings and resources on Data Quality, Data Standards and Technologies have been compiled in the resources to help address your question." %}</p>
+                {% endif %}
                 <div class="row">
                     <div class="col ">
                         <button type="button" class="btn btn-block home-page-buttons background-greenish-color" onclick='window.location.href={% url 'workpackages:category_view' 'Data-Quality' %}'>{% trans "Data Quality Themes" %}</button>
@@ -154,10 +190,17 @@
                 </div>
             </div>
             <div class="col h slider-color items-box">
-                <h1>{{ page.paper_box_title }}</h1>
-                <!-- <h1>{% trans "Papers" %}</h1> -->
-                <p class="font-weight-bold">{{ page.paper_box_subtitle }}</p>
-                <!-- <p class="font-weight-bold">{% trans "Recent papers" %}</p> -->
+                {% if page.paper_box_title %}
+                    <h1>{{ page.paper_box_title }}</h1>
+                {% else %}
+                    <h1>{% trans "Papers" %}</h1>
+                {% endif %}
+
+                {% if page.paper_box_subtitle %}
+                    <p class="font-weight-bold">{{ page.paper_box_subtitle }}</p>
+                {% else %}
+                    <p class="font-weight-bold">{% trans "Recent papers" %}</p>
+                {% endif %}
 
                 {% for q in "citizen"|query_publications %}
                     <p><a href="{% url 'publications:article_publications_detail' q.id %}">{{q}}</a></p>
@@ -165,14 +208,22 @@
 
             </div>
             <div class="col h slider-color items-box mr-0">
-                <h1>{{ page.CitSciSE_box_title }}</h1>
-                <!-- <h1>{% trans "CitSciSE Community" %}</h1> -->
-                <p class="font-weight-bold">{{ page.CitSciSE_box_subtitle }}</p>
-                <!-- <p class="font-weight-bold">{% trans "Recent Blog Posts" %}<p> -->
+                {% if page.CitSciSE_box_title %}
+                    <h1>{{ page.CitSciSE_box_title }}</h1>
+                {% else %}
+                    <h1>{% trans "CitSciSE Community" %}</h1>
+                {% endif %}
+
+                {% if page.CitSciSE_box_subtitle %}
+                    <p class="font-weight-bold">{{ page.CitSciSE_box_subtitle }}</p>
+                {% else %}
+                    <p class="font-weight-bold">{% trans "Recent Blog Posts" %}<p>
+                {% endif %}
 
                 {% for blog in "citizen"|latest_blogs %}
                     <p>{{ blog.published }}: <a href="http://example.com">{{blog}}</a></p>
                 {% endfor %}
+
             </div>
         </div>
     </div>
