--- a/ArcsSystem/templates/blog/blog_list.html
+++ b/ArcsSystem/templates/blog/blog_list.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load wagtailcore_tags %}
 {% load static %}
 {% load i18n %}
 
@@ -7,14 +8,25 @@
 <div class="container">
     <div class="row">
         <div class="col">
+
             <h1>{% trans "Blog home page (list view)" %}</h1>
 
-            {% for instance in object_list %}
-                <p>{{ instance.id }} - <a href='{{ instance.get_absolute_url }}'>{{ instance.title}}, {{ instance.published }}</a></p>
+            {% for instance in blog_entries %}
+                {% for block in instance.body %}
+                    {% if block.block_type == 'title' %}
+                        <p>{{ instance.id }} -  <a href='{{ instance.get_absolute_url }}'> {% include_block block %}, {{ instance.publishedDate }}</a><p>
+                    {% endif %}
+                {% endfor %}
             {% endfor %}
+
+            <!-- {% for instance in object_list %}
+                <p>{{ instance.id }} - <a href='{{ instance.get_absolute_url }}'>{{ instance.title}}, {{ instance.published }}</a></p>
+            {% endfor %} -->
+
             <h1>
             {% trans "Blog detail view" %}
             </h1>
+
             <div class="pagination">
                 <span class="step-links">
                     {% if page_obj.has_previous %}
